--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <!DOCTYPE html>
-
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Первый файл</title>
+</head>
+<body>
 <h1> Лабораторные работы </h1>
+</body>
