--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -14,3 +14,10 @@
 	<h5>Заголовок 5 уровня</h5>
 	<h6>Заголовок 6 уровня</h6>
 </blockquote>
+
+<div>
+	<p>Элемент p создает параграф. В нем не могут содержаться элементы уровня блока (включая и сам элемент p). Также нежелательно использовать пустой элемент p, так как браузеры игнорируют пустые элементы p.</p>
+	<p>Элемент p добавляет вертикальный отступ перед и после абзаца. Применяется параграф для облегчения чтения текста и логической группировки связанных по смыслу предложений.</p>
+	<p>Элемент div может содержать как внутренние элементы, так и блочные и применяется для структурного разделения документа. Крайне часто применяется при верстке страниц с применением CSS, что дало ей определение «блочная».</p>
+	<p>Наряду с элементом в будущем div будет часто использоваться элемент span для форматирования частей строк.</p>
+</div>
