--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -21,3 +21,28 @@
 	<p>Элемент div может содержать как внутренние элементы, так и блочные и применяется для структурного разделения документа. Крайне часто применяется при верстке страниц с применением CSS, что дало ей определение «блочная».</p>
 	<p>Наряду с элементом в будущем div будет часто использоваться элемент span для форматирования частей строк.</p>
 </div>
+
+<pre>   o8%8888,
+      o88%8888888.
+     8'-    -:8888b
+    8'         8888
+   d8.-=. ,==-.:888b
+   >8 `~` :`~' d8888
+   88         ,88888
+   88b. `-~  ':88888
+   888b ~==~ .:88888
+   88888o--:':::8888
+   `88888| :::' 8888b
+   8888^^'       8888b
+  d888           ,%888b.
+ d88%            %%%8--'-.
+/88:.__ ,       _%-' ---  -
+    '''::===..-'   =  --.  `
+</pre>
+
+<div> 
+	<p>&lt</p>
+	<p>&rt</p>
+	<p>&quot</p>
+	<p>&apos</p>
+</div>
