--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -46,3 +46,12 @@
 	<p>&quot</p>
 	<p>&apos</p>
 </div>
+
+<div> 
+<pre> <h2 class="center">
+Голландская фирма Horns&amp;Hoofs запустила online-магазин
+</h2>
+</pre>
+
+
+</div>
