--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -53,5 +53,15 @@
 </h2>
 </pre>
 
+</div>
+
+
+<div> <p>Формула расчета энергии:</p>
+<sub>E=mc2</sub>
+
+<p>Химическая формула воды:</p>	
+<sup>H2O</sup>
 
 </div>
+
+
