--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -48,9 +48,9 @@
 </div>
 
 <div> 
-<pre> <h2 class="center">
+<pre> <code><h2 class="center">
 Голландская фирма Horns&amp;Hoofs запустила online-магазин
-</h2>
+</h2></code>
 </pre>
 
 </div>
