--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -42,25 +42,25 @@
 
 <div> 
 	<p>&lt</p>
-	<p>&rt</p>
+	<p>&gt</p>
 	<p>&quot</p>
-	<p>&apos</p>
+	<p>&amp</p>
 </div>
 
 <div> 
-<pre> <code><h2 class="center">
+<pre> <code> &lth2 class="center"&gt
 Голландская фирма Horns&amp;Hoofs запустила online-магазин
-</h2></code>
+&lt/h2></code>
 </pre>
 
 </div>
 
 
 <div> <p>Формула расчета энергии:</p>
-<sub>E=mc2</sub>
+<p>E=mc <sup>2</sup></p>
 
 <p>Химическая формула воды:</p>	
-<sup>H2O</sup>
+<p>H <sub>2</sub>0</p>
 
 </div>
 
