--- a/lab1/lab1_2.html
+++ b/lab1/lab1_2.html
@@ -5,8 +5,8 @@
 <!-- Сделайте элементы списка ссылками на соответствующие заголовки h2 -->
 	<ul>
     <li><a href = "#How to make a link">Как сделать ссылку </a></li>
-    <li> <a href = "colour of links"> Цвет ссылок </a></li>
-		<li> <a href = "Target Attribute">Атрибут target</a> </li>
+    <li> <a href = "#colour of links"> Цвет ссылок </a></li>
+		<li> <a href = "#Target Attribute">Атрибут target</a> </li>
 		<li>Изображение в качестве ссылки</li>
 		<li>Ссылки внутри страницы</li>
 	</ul>
