--- a/lab1/lab1_2.html
+++ b/lab1/lab1_2.html
@@ -7,7 +7,7 @@
     <li><a href = "#How to make a link">Как сделать ссылку </a></li>
     <li> <a href = "#colour of links"> Цвет ссылок </a></li>
 		<li> <a href = "#Target Attribute">Атрибут target</a> </li>
-		<li>Изображение в качестве ссылки</li>
+		<li> <a href = "#Image as pic">Изображение в качестве ссылки</a></li>
 		<li>Ссылки внутри страницы</li>
 	</ul>
 </nav>
@@ -203,6 +203,8 @@
 
 <hr>
   </article>
+
+<article id = "Image as pic">	
 <h2>Изображение в качестве ссылки</h2>
 <p>Кроме текста, в качестве ссылок можно использовать и рисунки. Изображение в 
   этом случае надо поместить между тегами <code>&lt;a&gt;</code> 
@@ -248,7 +250,7 @@
 &lt;/html&gt;</code></pre>
 
 <hr>
-
+	</article>
 <h2>Ссылки внутри страницы</h2>
 <p>
 Якорем называется закладка с уникальным именем на определённом месте веб-страницы, предназначенная для перехода к ней по ссылке. Якоря удобно применять в документах большого объёма, чтобы можно было быстро переходить к нужному разделу.
