--- a/lab1/lab1_2.html
+++ b/lab1/lab1_2.html
@@ -8,7 +8,7 @@
     <li> <a href = "#colour of links"> Цвет ссылок </a></li>
 		<li> <a href = "#Target Attribute">Атрибут target</a> </li>
 		<li> <a href = "#Image as pic">Изображение в качестве ссылки</a></li>
-		<li>Ссылки внутри страницы</li>
+		<li> <a href = "#Links in page">Ссылки внутри страницы</a></li>
 	</ul>
 </nav>
 
@@ -251,6 +251,8 @@
 
 <hr>
 	</article>
+
+<article id = "Links in page">	
 <h2>Ссылки внутри страницы</h2>
 <p>
 Якорем называется закладка с уникальным именем на определённом месте веб-страницы, предназначенная для перехода к ней по ссылке. Якоря удобно применять в документах большого объёма, чтобы можно было быстро переходить к нужному разделу.
@@ -313,6 +315,6 @@
   &lt;p&gt;&lt;a href=&quot;#&quot;&gt;О нас&lt;/a&gt;&lt;/p&gt;
  &lt;/body&gt;
 &lt;/html&gt;</code></pre>
-
+</article>
 </body>
 </html>
