--- a/lab1/lab1_3/doc2.html
+++ b/lab1/lab1_3/doc2.html
@@ -2,45 +2,76 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Цвет ссылок</title>
+  <title>Как сделать ссылку</title>
 </head>
 <body>
-<h1>Цвет ссылок</h1>
-<p>Цвета ссылок задаются в качестве атрибутов тега <code>&lt;body&gt;</code>. 
- Атрибуты являются необязательными и если они не указаны используются 
-  значения по умолчанию.</p>
-<p><code>link</code> &#8212; определяет цвет ссылок на веб-странице 
-  (цвет по умолчанию синий, #0000FF).</p>
+<article id = "s2">
+<h1>Как сделать ссылку</h1>
+<p>Для создания ссылки необходимо сообщить браузеру, что является 
+  ссылкой, а также указать адрес документа, на который следует сделать 
+  ссылку. Оба действия выполняются с помощью тега <code>&lt;a&gt;</code>, 
+  который имеет единственный обязательный атрибут <code>href</code>. 
+  В качестве значения используется адрес документа (URL).</p>
+<p>Адрес ссылки может быть абсолютным и относительным. Абсолютные адреса работают 
+  везде и всюду независимо от имени сайта или веб-страницы, где прописана ссылка. 
+  Начинаются они с указания протокола передачи данных. Так, для веб-страниц это 
+  обычно HTTP (HyperText Transfer Protocol, протокол передачи гипертекста), соответственно, 
+  абсолютные ссылки начинаются с ключевого слова <code>http://</code> 
+  (пример&nbsp;1).</p>
+<p>Пример 1. Использование абсолютных ссылок</p>
+<pre><code>&lt;!DOCTYPE html&gt;
+&lt;html lang=&quot;ru&quot;&gt;
+ &lt;head&gt;
+  &lt;meta charset=&quot;UTF-8&quot;&gt;
+  &lt;title&gt;Абсолютная ссылка&lt;/title&gt;
 
-<p><code>alink</code> &#8212; цвет активной ссылки. Цвет ссылки 
-  меняется при нажатии на ней кнопки мыши. Цвет по умолчанию красный, 
-  #FF0000.  </p>
-<p><code>vlink</code> &#8212; цвет уже посещенных ссылок. Цвет 
-  по умолчанию фиолетовый, #800080.</p>
-<p>В HTML цвета задаются обычно цифрами в шестнадцатеричном коде, в виде <code>#rrggbb</code>, 
-  где r, g и b обозначают соответственно красную, зеленую и синюю составляющую. 
-  Для каждого цвета задается шестнадцатеричное значение от 00 до FF, что соответствует 
-  диапазону от 0 до 255 в десятичном исчислении. Затем эти значения объединяются 
-  в одно число, перед которым ставится символ # (пример&nbsp;1).</p>
-
-<p>Пример 1. Задание цветов ссылок</p>
-
-<pre><code>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01 Transitional//EN&quot; &quot;http://www.w3.org/TR/html4/loose.dtd&quot;&gt;
- &lt;html&gt;
-  &lt;head&gt;
-  &lt;meta http-equiv=&quot;Content-Type&quot; content=&quot;text/html; charset=utf-8&quot;&gt;
-
-  &lt;title&gt;Цвет ссылок&lt;/title&gt;
  &lt;/head&gt;
- &lt;body link=&quot;red&quot; vlink=&quot;#cecece&quot; alink=&quot;#ff0000&quot; bgcolor=&quot;black&quot;&gt;
-
-  &lt;p&gt;&lt;a href=&quot;content.html&quot;&gt;Содержание сайта&lt;/a&gt;&lt;/p&gt;
+ &lt;body&gt;
+  &lt;p&gt;&lt;a href=&quot;http://www.yandex.ru&quot;&gt;Поисковая система Яндекс&lt;/a&gt;&lt;/p&gt;
  &lt;/body&gt;
 &lt;/html&gt;</code></pre>
 
-<p>Цвет не обязательно задавать в шестнадцатеричном формате, можно использовать 
-  и ключевые слова. В данном примере цвет фона веб-страницы установлен черным, 
-  а цвет ссылок&nbsp;&#8212; красным. </p>
+<p>Относительные ссылки, как следует из их названия, построены относительно 
+  текущего документа или адреса.</p>
+  <h3><b>Примеры относительных адресов</b></h3>
+<p>
+  <code>/<br>
+  /demo/<br>
+  </code>
+  Эти две ссылки называются неполные и указывают веб-серверу загружать 
+  файл index.html (или default.html), который находится в корне сайта 
+  или папке demo. Если файл index.html отсутствует, браузер, как правило, 
+  показывает список файлов, находящихся в данном каталоге. </p>
 
+<p> <code>/images/pic.gif</code><br>
+  Слэш перед адресом говорит о том, что адресация начинается от корня 
+  сайта. Ссылка ведет на рисунок pic.gif, который находится в папке 
+  images. А та в свою очередь размещена в корне сайта.</p>
+<p> <code>../help/me.html</code><br>
+  Две точки перед именем указывают браузеру перейти на уровень выше 
+  в списке каталогов сайта.</p>
+<p> <code>manual/info.html</code><br>
+  Если перед именем папки нет никаких дополнительных символов, вроде точек, 
+  то она размещена внутри текущего каталога (пример&nbsp;2).</p>
+
+<p>Пример 2. Использование относительных ссылок</p>
+<pre><code>&lt;!DOCTYPE html&gt;
+&lt;html lang=&quot;ru&quot;&gt;
+ &lt;head&gt;
+  &lt;meta charset=&quot;UTF-8&quot;&gt;
+  &lt;title&gt;Относительная ссылка&lt;/title&gt;
+ &lt;/head&gt;
+ &lt;body&gt;
+  &lt;p&gt;&lt;a href=&quot;images/xxx.jpg&quot;&gt;Посмотрите на мою фотографию!&lt;/a&gt;&lt;/p&gt;
+  &lt;p&gt;&lt;a href=&quot;tip.html&quot;&gt;Как сделать такое же фото?&lt;/a&gt;&lt;/p&gt;
+ &lt;/body&gt;
+&lt;/html&gt;</code></pre>
+
+<p>Иногда можно встретить в адресе ссылки путь в виде <code>./file/doc.html</code>. 
+  Точка со слэшем (символ /) означает, что отсчет ведется от текущей папки. Подобная 
+  запись избыточна и ее можно сократить до <code>file/doc.html</code>. </p>
+</article>
+
+<a href = "#s3"> Цвет ссылок</a>
 </body>
 </html>
