--- a/lab1/lab1_3/doc1.html
+++ b/lab1/lab1_3/doc1.html
@@ -71,5 +71,7 @@
   Точка со слэшем (символ /) означает, что отсчет ведется от текущей папки. Подобная 
   запись избыточна и ее можно сократить до <code>file/doc.html</code>. </p>
 </article>
+
+<a href = "#s3"> Цвет ссылок</a>
 </body>
 </html>
