--- a/lab1/lab1_3/doc2.html
+++ b/lab1/lab1_3/doc2.html
@@ -43,5 +43,7 @@
   и ключевые слова. В данном примере цвет фона веб-страницы установлен черным, 
   а цвет ссылок&nbsp;&#8212; красным. </p>
 </article>
+
+<a href ="#s4">Атрибут Target</a>
 </body>
 </html>
