--- a/lab1/lab1_3/doc3.html
+++ b/lab1/lab1_3/doc3.html
@@ -5,6 +5,7 @@
   <title>Атрибут target</title>
 </head>
 <body>
+<article id ="s4">
 <h1>Атрибут target</h1>
 <p>По умолчанию, при переходе по ссылке документ открывается в текущем окне или 
   фрейме. При необходимости, это условие может быть изменено атрибутом <code>target</code> 
@@ -76,6 +77,8 @@
 <p>Сделать так, чтобы ссылка открывалась в текущем окне, в таком случае можно, 
   если добавить к тегу <code>&lt;a&gt;</code> атрибут <code>target=&quot;_self&quot;</code>, 
 как показано в данном примере.</p>
+</article>
 
+<a href ="#s5">Изображение в качестве ссылки</a>
 </body>
 </html>
