--- a/lab1/lab1_3/doc.html
+++ b/lab1/lab1_3/doc.html
@@ -2,9 +2,10 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title><a href = "#Make">Навигация между файлами</a> </title>
+  <title></title>
 </head>
 <body>
+<a href = "#Make">Навигация между файлами</a> 
 <h1>Ссылки</h1>
 <nav>
 <article id = "Make" >
@@ -21,6 +22,6 @@
 </article>
 
 
-<a href = "#s2">Как сделать ссылку</a>
+<a href = "doc1.html">Как сделать ссылку</a>
 </body>
 </html>
