--- a/lab1/lab1_3/doc.html
+++ b/lab1/lab1_3/doc.html
@@ -23,5 +23,10 @@
 
 
 <a href = "doc1.html">Как сделать ссылку</a>
+<a href = "doc2.html">Цвет ссылок</a>
+<a href = "doc3.html">Атрибут target</a>
+<a href = "doc4.html">Изображение в качестве ссылки</a>
+<a href = "doc5.html">Ссылки внутри страницы</a>
+  
 </body>
 </html>
