--- a/lab1/lab1_3/doc1.html
+++ b/lab1/lab1_3/doc1.html
@@ -72,6 +72,12 @@
   запись избыточна и ее можно сократить до <code>file/doc.html</code>. </p>
 </article>
 
-<a href = "#s3"> Цвет ссылок</a>
+
+<a href = "doc.html">Навигация между файлами</a>
+<a href = "doc2.html">Цвет ссылок</a>
+<a href = "doc3.html">Атрибут target</a>
+<a href = "doc4.html">Изображение в качестве ссылки</a>
+<a href = "doc5.html">Ссылки внутри страницы</a>
+  
 </body>
 </html>
