--- a/lab1/lab1_3/doc2.html
+++ b/lab1/lab1_3/doc2.html
@@ -44,6 +44,10 @@
   а цвет ссылок&nbsp;&#8212; красным. </p>
 </article>
 
-<a href ="#s4">Атрибут Target</a>
+<a href = "doc1.html">Как сделать ссылку</a>
+<a href = "doc.html">Навигация между файлами</a>
+<a href = "doc3.html">Атрибут target</a>
+<a href = "doc4.html">Изображение в качестве ссылки</a>
+<a href = "doc5.html">Ссылки внутри страницы</a>
 </body>
 </html>
