--- a/lab1/lab1_3/doc3.html
+++ b/lab1/lab1_3/doc3.html
@@ -78,7 +78,12 @@
   если добавить к тегу <code>&lt;a&gt;</code> атрибут <code>target=&quot;_self&quot;</code>, 
 как показано в данном примере.</p>
 </article>
-
-<a href ="#s5">Изображение в качестве ссылки</a>
+<ol>
+<li><a href = "doc1.html">Как сделать ссылку</a></li>
+<li><a href = "doc2.html">Цвет ссылок</a></li>
+<li><a href = "doc3.html">Атрибут target</a></li>
+<li><a href = "doc4.html">Изображение в качестве ссылки</a></li>
+<li><a href = "doc5.html">Ссылки внутри страницы</a></li>
+  </ol>
 </body>
 </html>
