--- a/lab1/lab1_3/doc.html
+++ b/lab1/lab1_3/doc.html
@@ -5,7 +5,7 @@
   <title></title>
 </head>
 <body>
-<a href = "#Make">Навигация между файлами</a> 
+
 <h1>Ссылки</h1>
 <nav>
 <article id = "Make" >
@@ -22,11 +22,12 @@
 </article>
 
 
-<a href = "doc1.html">Как сделать ссылку</a>
-<a href = "doc2.html">Цвет ссылок</a>
-<a href = "doc3.html">Атрибут target</a>
-<a href = "doc4.html">Изображение в качестве ссылки</a>
-<a href = "doc5.html">Ссылки внутри страницы</a>
-  
+<ol>
+<li><a href = "doc1.html">Как сделать ссылку</a></li>
+<li><a href = "doc2.html">Цвет ссылок</a></li>
+<li><a href = "doc3.html">Атрибут target</a></li>
+<li><a href = "doc4.html">Изображение в качестве ссылки</a></li>
+<li><a href = "doc5.html">Ссылки внутри страницы</a></li>
+  </ol>
 </body>
 </html>
