--- a/lab1/lab1_3/doc1.html
+++ b/lab1/lab1_3/doc1.html
@@ -73,11 +73,13 @@
 </article>
 
 
-<a href = "doc.html">Навигация между файлами</a>
-<a href = "doc2.html">Цвет ссылок</a>
-<a href = "doc3.html">Атрибут target</a>
-<a href = "doc4.html">Изображение в качестве ссылки</a>
-<a href = "doc5.html">Ссылки внутри страницы</a>
+<ol>
+<li><a href = "doc.html">Гиперссылка</a></li>
+<li><a href = "doc2.html">Цвет ссылок</a></li>
+<li><a href = "doc3.html">Атрибут target</a></li>
+<li><a href = "doc4.html">Изображение в качестве ссылки</a></li>
+<li><a href = "doc5.html">Ссылки внутри страницы</a></li>
+  </ol>
   
 </body>
 </html>
