--- a/lab1/lab1_3/doc4.html
+++ b/lab1/lab1_3/doc4.html
@@ -5,6 +5,7 @@
   <title>Изображение в качестве ссылки</title>
 </head>
 <body>
+  
 <h1>Изображение в качестве ссылки</h1>
 <p>Кроме текста, в качестве ссылок можно использовать и рисунки. Изображение в 
   этом случае надо поместить между тегами <code>&lt;a&gt;</code> 
@@ -48,6 +49,12 @@
    height=&quot;50&quot; alt=&quot;Пример&quot;&gt;&lt;/a&gt;&lt;/p&gt;
  &lt;/body&gt; 
 &lt;/html&gt;</code></pre>
-
+<ol>
+<li><a href = "doc1.html">Как сделать ссылку</a></li>
+<li><a href = "doc2.html">Цвет ссылок</a></li>
+<li><a href = "doc3.html">Атрибут target</a></li>
+<li><a href = "doc.html">Гиперссылка</a></li>
+<li><a href = "doc5.html">Ссылки внутри страницы</a></li>
+  </ol>
 </body>
 </html>
