--- a/lab1/lab1_3/doc5.html
+++ b/lab1/lab1_3/doc5.html
@@ -68,5 +68,12 @@
  &lt;/body&gt;
 &lt;/html&gt;</code></pre>
 
+<ol>
+<li><a href = "doc1.html">Как сделать ссылку</a></li>
+<li><a href = "doc2.html">Цвет ссылок</a></li>
+<li><a href = "doc3.html">Атрибут target</a></li>
+<li><a href = "doc4.html">Изображение в качестве ссылки</a></li>
+<li><a href = "doc.html">Гиперссылка</a></li>
+  </ol>
 </body>
 </html>
