--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1> Лабораторные работы </h1>
 
-<a href ="lab1/lab1_1.html">Задание 1(Заголовки, работа с текстом) </a>
+<a href ="lab1/lab1_1.html">Задание 1</a>
