--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <h1> Лабораторные работы </h1>
+<ul>
 
-<a href ="lab1/lab1_1.html">Задание 1</a>
+  <li><a href ="lab1/lab1_1.html">Задание 1 (Заголовки, оабота с текстом)</a></li>
+  <li><a href = "lab1.lab1_2.html">Задание 2 </a></li>
+
+</ul>
