--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <ul>
 
   <li><a href ="lab1/lab1_1.html">Задание 1 (Заголовки, оабота с текстом)</a></li>
-  <li><a href = "lab1.lab1_2.html">Задание 2 </a></li>
+  <li><a href = "lab1/lab1_2.html">Задание 2 </a></li>
 
 </ul>
