--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 
   <li><a href ="lab1/lab1_1.html">Задание 1 (Заголовки, оабота с текстом)</a></li>
   <li><a href = "lab1/lab1_2.html">Задание 2 </a></li>
-
+  <li><a href ="lab1/lab1_3/doc.html">Задание 3 </a></li>
+  <li><a href ="lab1/lab1_4/lab1_4.html">Задание 4</a></li>
+  <li><a href ="lab1/lab1_5/lab1_5.html">Задание 5</a></li>
 </ul>
