--- a/lab1/lab1_4/lab1_4.html
+++ b/lab1/lab1_4/lab1_4.html
@@ -9,15 +9,15 @@
 		
 		<h2>Элемент <code>img</code></h2> 
 		<p>Элемент <code>img</code> внедряет изображение в текущий документ в месте определения элемента. Элемент <code>img</code> не имеет содержимого — он замещается на ходу изображением, указанным в атрибуте <code>src</code>.</p>
-		<img src = "aquaria.jpg" alt='cherep'>  
+		<img src = "images/aquaria.jpg" alt='cherep'>  
 		<h2>Альтернативный текст</h2>
 		<p>Атрибут <code>alt</code> предоставляет краткое описание изображения. Он содержит альтернативный текст, который отображается, если изображение не может быть выведено. Пользовательские агенты должны отображать альтернативный текст, если они не поддерживают изображения, или сконфигурированы так, чтобы не показывать изображения (отключен показ изображений).</p>
-		<img src = "muscle.png" alt = "muscleman">
+		<img src = "images/muscle.png" alt = "muscleman">
 		<h2>Размеры изображения</h2>
 		<p>Атрибуты <code>width</code> и <code>height</code> задают размеры области изображения. Если оба атрибута не заданы, размер изображения будет определен после его полной загрузки, после чего размеры области будут изменены для размещения содержания картинки.
 		Если задан только один из атрибутов, второй размер будет высчитан в соответствие с пропорциями изображения и заданным атрибутом.
 		При указании обоих атрибутов ПА «впишет» изображение в область с указанными размерами.</p>
-		<img src ="html5-logo.png" width = "2000" height = "100">
+		<img src ="images/html5-logo.png" width = "2000" height = "100">
 		
 		<p>Для добавления гибких (responsive) изображений (таких, 
 		которые отображаются хорошо на устройствах с сильно отличающимися размерами экрана, разрешением, и другими характеристиками)
@@ -35,7 +35,7 @@
 		
 		
 		
-		<img  src="mushroom.jpg"
+		<img  src="images/mushroom.jpg"
 		srcset="mushroom_portrait.jpg 350w, mushroom_landscape.jpg 650w" 
 		sizes="(max-width: 600px) 300px, (min-width: 600px) 600px"
 		alt="">
@@ -47,7 +47,7 @@
 		Обычно применяется для иллюстраций, фрагментов кода, схем, графиков, диаграмм и др.
 		Элемент <code>figcaption</code> содержит описание для элемента <code>figure</code>. Он должен быть первым или последним элементом в группе.</p>
 		<figure>
-			<img src = "redcat.jpg">
+			<img src = "images/redcat.jpg">
 			<figcaption>Рыжий кот</figcaption>
 		</figure>
 
