--- a/lab1/lab1_4/lab1_4.html
+++ b/lab1/lab1_4/lab1_4.html
@@ -17,7 +17,7 @@
 		<p>Атрибуты <code>width</code> и <code>height</code> задают размеры области изображения. Если оба атрибута не заданы, размер изображения будет определен после его полной загрузки, после чего размеры области будут изменены для размещения содержания картинки.
 		Если задан только один из атрибутов, второй размер будет высчитан в соответствие с пропорциями изображения и заданным атрибутом.
 		При указании обоих атрибутов ПА «впишет» изображение в область с указанными размерами.</p>
-		<img src ="images/html5-logo.png" width = "2000" height = "100">
+		<img src ="images/html5-logo.svg" width = "2000" height = "100">
 		
 		<p>Для добавления гибких (responsive) изображений (таких, 
 		которые отображаются хорошо на устройствах с сильно отличающимися размерами экрана, разрешением, и другими характеристиками)
