--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1> Лабораторные работы </h1>
 <ul>
 
-  <li><a href ="lab1/lab1_1.html">Задание 1 (Заголовки, оабота с текстом)</a></li>
+  <li><a href ="lab1/lab1_1.html">Задание 1 (Заголовки, работа с текстом)</a></li>
   <li><a href = "lab1/lab1_2.html">Задание 2 </a></li>
   <li><a href ="lab1/lab1_3/doc.html">Задание 3 </a></li>
   <li><a href ="lab1/lab1_4/lab1_4.html">Задание 4</a></li>
