--- a/lab1/lab1_5/lab1_5.html
+++ b/lab1/lab1_5/lab1_5.html
@@ -7,10 +7,10 @@
      <body> 
       <p><img src="LAB1/images/slon.png" width="411" height="260" usemap="#map" alt="Навигация"></p>
       <map name="map"> 
-          <img src="LAB1/images/light.gif" width="411" height="260" usemap="#map" alt="Навигация"></p>
+<!--           <img src="LAB1/images/light.gif" width="411" height="260" usemap="#map" alt="Навигация"></p>
       <map name="map"> 
           <img src="LAB1/images/muscle.png" width="411" height="260" usemap="#map" alt="Навигация"></p>
-      <map name="map"> 
+      <map name="map">  -->
         <area shape="poly" alt="Закладка 2" 
         coords="210,27,203,9,202,6,197,2,192,1,120,1,115,2,110,6,112,9,119,27,119,32,211,32,210,27" 
         href="lab1/lab1_1.html">
