--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -1,10 +1,15 @@
+<!DOCTYPE html>
+<html>
+  <head>
+  </head>
+  <body>
 <h1>Заголовок Первого Уровня</h1>
 <p>-------------------------------</p>
 
 
-<h2>ТИП 1.</h2>
-<h3>ТИП 1.1</h3>
-<h4> ТИП 1.1.1</h4>
+<h2>Заголовок 2го уровня</h2>
+<h3>Заголовок 3го уровня</h3>
+<h4>Заголовок 4го уровня</h4>
 
 <blockquote>
   <h1>Заголовок 1 уровня</h1>
@@ -63,5 +68,6 @@
 <p>H <sub>2</sub>0</p>
 
 </div>
-
+  </body>
+</html>
 
