--- a/lab1/lab1_5/lab1_5.html
+++ b/lab1/lab1_5/lab1_5.html
@@ -16,30 +16,17 @@
           <img src="LAB1/images/slon.png" width="211" height="100" usemap="#map5" alt="Навигация">
       
        <map name="map1"> 
-          <area shape="poly" alt="Закладка 1" 
-        coords="210,27,203,9,202,6,197,2,192,1,120,1,115,2,110,6,112,9,119,27,119,32,211,32,210,27" 
-        href="lab1/lab1_1.html">
+        <area target="_self" alt="Навигация"  href="lab1_1.html" coords="71,185,226,16" shape="rect">
       </map>
           <map name="map2">   
-        <area shape="poly" alt="Закладка 2" 
-        coords="302,27,295,9,293,6,289,2,283,1,212,1,206,2,202,6,203,9,210,27,211,32,284,32,303,32,302,27" 
-        href="lab1/lab1_2.html">
+        <area target="_self" alt="Навигация"  href="lab1_2.html" coords="71,485,526,16" shape="rect">
           </map>
         <map name="map3"> 
-        <area shape="poly" alt="Закладка 3" 
-        coords="302,27,303,32,394,32,393,27,386,9,382,3,375,1,303,1,298,2,293,6,295,9,302,27" 
-        href="lab1/lab1_3/lab1_3.html">
+                <area target="_self" alt="Навигация"  href="lab1_3/lab1_3.html" coords="71,785,826,16" shape="rect">
         </map>
            <map name="map4">  
-        <area shape="poly" alt="Закладка 4" 
-        coords="302,27,303,32,394,32,393,27,386,9,382,3,375,1,303,1,298,2,293,6,295,9,302,27" 
-        href="lab1/lab1_4/lab1_4.html">
+               <area target="_self" alt="Навигация"  href="lab1_4/lab1_4.html" coords="71,1085,1126,16" shape="rect">
            </map>
 
-            <map name="map5"> 
-         <area shape="poly" alt="Закладка 5" 
-        coords="302,27,303,32,394,32,393,27,386,9,382,3,375,1,303,1,298,2,293,6,295,9,302,27" 
-        href="lab1/lab1_5/lab1_5.html">  
-          </map>
      </body>
     </html>
