--- a/lab1/lab1_5/lab1_5.html
+++ b/lab1/lab1_5/lab1_5.html
@@ -16,16 +16,16 @@
           <img src="LAB1/images/slon.png" width="211" height="100" usemap="#map5" alt="Навигация">
       
        <map name="map1"> 
-        <area target="_self" alt="Навигация"  href="lab1_1.html" coords="71,185,226,16" shape="rect">
+        <area target="_self" alt="Навигация"  href="lab1/lab1_1.html" coords="71,185,226,16" shape="rect">
       </map>
           <map name="map2">   
-        <area target="_self" alt="Навигация"  href="lab1_2.html" coords="71,485,526,16" shape="rect">
+        <area target="_self" alt="Навигация"  href="lab1/lab1_2.html" coords="71,485,526,16" shape="rect">
           </map>
         <map name="map3"> 
-                <area target="_self" alt="Навигация"  href="lab1_3/lab1_3.html" coords="71,785,826,16" shape="rect">
+                <area target="_self" alt="Навигация"  href="lab1/lab1_3/lab1_3.html" coords="71,785,826,16" shape="rect">
         </map>
            <map name="map4">  
-               <area target="_self" alt="Навигация"  href="lab1_4/lab1_4.html" coords="71,1085,1126,16" shape="rect">
+               <area target="_self" alt="Навигация"  href="lab1/lab1_4/lab1_4.html" coords="71,1085,1126,16" shape="rect">
            </map>
 
      </body>
