--- a/lab1/lab1_5.html
+++ b/lab1/lab1_5.html
@@ -16,10 +16,10 @@
           <img src="LAB1/images/slon.png" width="211" height="100" usemap="#map5" alt="Навигация">
       
        <map name="map1"> 
-        <area target="_self" alt="Навигация"  href="lab1/lab1_1.html" coords="71,185,226,16" shape="rect">
+        <area target="_self" alt="Навигация" a href="lab1/lab1_1.html" coords="71,185,226,16" shape="rect">
       </map>
           <map name="map2">   
-        <area target="_self" alt="Навигация"  href="lab1/lab1_2.html" coords="71,485,526,16" shape="rect">
+        <area target="_self" alt="Навигация" a href="lab1/lab1_2.html" coords="71,485,526,16" shape="rect">
           </map>
         <map name="map3"> 
                 <area target="_self" alt="Навигация"  href="lab1/lab1_3/doc.html" coords="71,785,826,16" shape="rect">
