--- a/lab2/lab2_3/iframes/index.html
+++ b/lab2/lab2_3/iframes/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-
+<iframe  height="100vh" width="200" title="menu"></iframe>
+<iframe  height="100vh" width="800" title="content"></iframe>
 </body>
 
 </html>
