--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <h1> Лабораторные работы </h1>
-<ul>
-
+<ol>
+<li>
+  <ul>
+  <p>Лабораторная работа №1</p>
   <li><a href ="lab1/lab1_1.html">Задание 1 (Заголовки, работа с текстом)</a></li>
   <li><a href = "lab1/lab1_2.html">Задание 2 </a></li>
   <li><a href ="lab1/lab1_3/doc.html">Задание 3 </a></li>
   <li><a href ="lab1/lab1_4/lab1_4.html">Задание 4</a></li>
   <li><a href ="lab1/lab1_5/lab1_5.html">Задание 5</a></li>
-  <li><a href ="lab2/lab2_1.html">Задание 1(Лабораторная 2)</li>
-  <li><a href ="lab2/lab2_2.html">Задание 2(Лабораторная 2)</li>     
-  <li><a href ="lab2/lab2_3/iframes/index.html">Задание 3(Лабораторная 2)</li>
+    </li>
+  <li><p>Лабораторная работа №2</p>
+  <li><a href ="lab2/lab2_1.html">Задание 1</li>
+  <li><a href ="lab2/lab2_2.html">Задание 2</li>     
+  <li><a href ="lab2/lab2_3/iframes/index.html">Задание 3</li>
+</li>
 </ul>
+</ol>
