--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
+    <title>Задание 1</title>
   </head>
   <body>
+
 <h1>Заголовок Первого Уровня</h1>
 <p>-------------------------------</p>
 
 
-<h2>Заголовок 2го уровня</h2>
-<h3>Заголовок 3го уровня</h3>
-<h4>Заголовок 4го уровня</h4>
+<h2>ТИП 1.</h2>
+<h3>ТИП 1.1</h3>
+<h4> ТИП 1.1.1</h4>
 
 <blockquote>
   <h1>Заголовок 1 уровня</h1>
@@ -46,16 +48,16 @@
 </pre>
 
 <div> 
-	<p>&lt</p>
-	<p>&gt</p>
-	<p>&quot</p>
-	<p>&amp</p>
+	<p>&lt;</p>
+	<p>&gt;</p>
+	<p>&quot;</p>
+	<p>&amp;</p>
 </div>
 
 <div> 
-<pre> <code> &lth2 class="center"&gt
+<pre> <code> &lt;h2 class="center"&gt;
 Голландская фирма Horns&amp;Hoofs запустила online-магазин
-&lt/h2></code>
+&lt;/h2></code>
 </pre>
 
 </div>
@@ -68,6 +70,6 @@
 <p>H <sub>2</sub>0</p>
 
 </div>
-  </body>
+</body>
 </html>
 
