--- a/lab2/lab2_3/iframes/index.html
+++ b/lab2/lab2_3/iframes/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <iframe   height="100vh" width="200" title="menu"></iframe>
-<iframe src ="lab2/lab2_3/menu.html" height="100vh" width="800" title="content"></iframe>
+<iframe src ="lab2/lab2_3/iframes/menu.html" height="100vh" width="800" title="content"></iframe>
 </body>
 
 </html>
