--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <ul>
   <li><a href ="lab2/lab2_1.html">Задание 1</li>
   <li><a href ="lab2/lab2_2.html">Задание 2</li>     
-  <li><a href ="lab2/lab2_3/index.html">Задание 3</li> 
+  <li><a href ="lab2/lab2_3/iframes/index.html">Задание 3</li> 
 </ul>
   </li>
 </ol>
