--- a/lab2/lab2_3.html
+++ b/lab2/lab2_3.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="ru">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Организация фреймовой структуры</title>
+</head>
+
+
+<body>
+    <iframe src="menu.html" name="menu" width="200"></iframe>
+    <iframe name="CONTENT" width="800"></iframe>
+</body>
+
+</html>
