--- a/lab2/menu.html
+++ b/lab2/menu.html
@@ -9,12 +9,12 @@
 
 <body>
 <p>
-        <a href="iframes/lab4_1_0.html" target="CONTENT">Ссылки</a><br>
-        <a href="iframes/lab4_1_1.html" target="CONTENT">Как сделать ссылку</a><br>
-        <a href="iframes/lab4_1_2.html" target="CONTENT">Цвет ссылок</a><br>
-        <a href="iframes/lab4_1_3.html" target="CONTENT">Атрибут target</a><br>
-        <a href="iframes/lab4_1_4.html" target="CONTENT">Изображение в качестве ссылки</a><br>
-        <a href="iframes/lab4_1_5.html" target="CONTENT">Ссылки внутри страницы</a>
+        <a href="lab2_3/iframes/lab4_1_0.html" target="CONTENT">Ссылки</a><br>
+        <a href="lab2_3/iframes/lab4_1_1.html" target="CONTENT">Как сделать ссылку</a><br>
+        <a href="lab2_3/iframes/lab4_1_2.html" target="CONTENT">Цвет ссылок</a><br>
+        <a href="lab2_3/iframes/lab4_1_3.html" target="CONTENT">Атрибут target</a><br>
+        <a href="lab2_3/iframes/lab4_1_4.html" target="CONTENT">Изображение в качестве ссылки</a><br>
+        <a href="lab2_3/iframes/lab4_1_5.html" target="CONTENT">Ссылки внутри страницы</a>
     </p>
 </body>
 
