--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <li><a href ="lab2/lab2_1.html">Задание 1</li>
   <li><a href ="lab2/lab2_2.html">Задание 2</li>     
   <li><a href ="lab2/lab2_3.html">Задание 3</li> 
+  <li><a href ="lab2/lab2_4.html">Задание 4</li> 
 </ul>
   </li>
 </ol>
