--- a/lab2/lab2_4.html
+++ b/lab2/lab2_4.html
@@ -20,7 +20,7 @@
 
 <h2>Демонстрация добавления встроенного фрейма</h2>
 <figure>
-<iframe src ="https://vkvideo.ru/video-202869502_456239024"name="video" width="560" height="315" allowfullscreen></iframe>
+<iframe src ="https://vk.com/video_ext.php?oid=-202869502&id=456239024&hd=2&autoplay=1"name="video" width="560" height="315" allowfullscreen></iframe>
 <figcaption>Видео от Физико-математический ф-т ОГУ им. И.С. Тургенева</figcaption>
   
 </figure>
