--- a/lab2/lab2_4.html
+++ b/lab2/lab2_4.html
@@ -26,11 +26,7 @@
 </figure>
 
 <h2>Демонстрация добавления на страницу видео</h2>
-<!-- 
-1. Скачайте видеоролик https://fedyaevys.ru/html&css/lab2/oreluniver.mp4
-2. С помощью элемента video добавьте на страницу  видеоплеер с элементами управления, который воспроизводит скачанное видео.
-3. Добавьте к видео обложку (последний кадр видео).
- -->
+<video width="400" height="300" controls="controls" poster=""><source src ="https://fedyaevys.ru/html&css/lab2/oreluniver.mp4"</source> </video>
 
  <h2>Демонстрация добавления на страницу аудио</h2>
 <!-- 
