--- a/lab2/lab2_4.html
+++ b/lab2/lab2_4.html
@@ -26,7 +26,7 @@
 </figure>
 
 <h2>Демонстрация добавления на страницу видео</h2>
-<video width="400" height="300" controls="controls" poster="lab2/last_frame.png"><source src ="https://fedyaevys.ru/html&css/lab2/oreluniver.mp4"</source> </video>
+<video width="400" height="300" controls="controls" poster="lab2/last_frame.jpg"><source src ="https://fedyaevys.ru/html&css/lab2/oreluniver.mp4"</source> </video>
 
  <h2>Демонстрация добавления на страницу аудио</h2>
 <!-- 
