--- a/lab2/lab2_4.html
+++ b/lab2/lab2_4.html
@@ -29,11 +29,11 @@
 <video width="400" height="300" controls="controls" poster="lab2/last_frame.jpg"><source src ="https://fedyaevys.ru/html&css/lab2/oreluniver.mp4"</source> </video>
 
  <h2>Демонстрация добавления на страницу аудио</h2>
-<!-- 
- 1. Скачайте аудиофайлы https://fedyaevys.ru/html&css/lab2/yuriy-gagarin-poehali.mp3 и https://fedyaevys.ru/html&css/lab2/yuriy-gagarin-poehali.ogg
- 2. С помощью элемента audio добавьте на страницу  аудиоплеер с элементами управления, который воспроизводит скачанные аудио
- 3. Используйте тег <source> для добавления нескольких форматов одного и того же файла на случай, если какой-то из них не будет поддерживаться браузером
-  -->
+<audio controls>
+  <source src="yuriy-gagarin-poehali.mp3" type="audio/mpeg" />
+  <source src="yuriy-gagarin-poehali.ogg" type="audio/ogg" />
+  
+</audio>
 
 </body>
 </html>
