--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Форма</title>
+</head>
+<body>
+    <form>
+ <label for="E-mail"><b>Email</b></label>
+    <input type="text" placeholder="Введите e-mail" name="email" required>
+    </form>
+</body>
+</html>
