--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -7,8 +7,16 @@
 </head>
 <body>
     <form>
- <label for="E-mail"><b>Email</b></label>
+ <label for="E-mail">Email</label>
     <input type="text" placeholder="Введите e-mail" name="email" required>
+
+ <label for="пароль">Пароль</label>
+    <input type="password" placeholder="Введите пароль" name="пароль" required>    
+
+<label for="man">Мужчина</label>
+        <input  type="radio" name="man"> 
+<label for="man">Женчина</label>
+        <input name="woman" type="radio" > 
     </form>
 </body>
 </html>
