--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -7,16 +7,17 @@
 </head>
 <body>
     <form>
- <label for="E-mail">Email</label>
-    <input type="text" placeholder="Введите e-mail" name="email" required>
+ <p><label for="E-mail">Email</label></p>
+  <input type="text" placeholder="Введите e-mail" name="email" required>
 
- <label for="пароль">Пароль</label>
-    <input type="password" placeholder="Введите пароль" name="пароль" required>    
-
+ <p> <label for="пароль">Пароль</label> </p>
+    <input type="password" placeholder="Введите пароль" name="пароль" required> 
+<p>Пол</p>
 <label for="man">Мужчина</label>
         <input  type="radio" name="man"> 
 <label for="man">Женчина</label>
         <input name="woman" type="radio" > 
+ <p><input type="submit" value="Выбрать"></p>       
     </form>
 </body>
 </html>
