--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -14,9 +14,9 @@
     <input type="password" placeholder="Введите пароль" name="пароль" required> 
 <p>Пол</p>
 <label for="man">Мужчина</label>
-        <input  type="radio" name="man"> 
+        <input  type="radio" name="man" value="option1"> 
 <label for="man">Женчина</label>
-        <input name="woman" type="radio" > 
+        <input name="woman" type="radio" value="option2" > 
  <p><input type="submit" value="Выбрать"></p>       
     </form>
 </body>
