--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form>
- <p><label for="E-mail">Email</label></p>
+ <p><label for="email">Email</label></p>
   <input type="text" placeholder="Введите e-mail" name="email" required>
 
  <p> <label for="пароль">Пароль</label> </p>
@@ -17,7 +17,12 @@
         <input  type="radio" name="man" value="option1"> 
 <label for="man">Женчина</label>
         <input name="woman" type="radio" value="option2" > 
- <p><input type="submit" value="Выбрать"></p>       
+ <p><input type="submit" value="Выбрать"></p>   
+
+<p><label for="date">Год рождения</label> </p>
+ <input type="date" value="2005-07-21"> 
+
+        
     </form>
 </body>
 </html>
