--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -32,7 +32,21 @@
     <input type="checkbox" name="languages" value="Испанский" >
     Испанский
   </label>
-        
+
+    <label>
+    <input type="checkbox" name="languages" value="Немецкий" >
+    Немецкий
+  </label>    
+   
+    <label>
+    <input type="checkbox" name="languages" value="Английский" >
+   Английский
+  </label>  
+
+    <label>
+    <input type="checkbox" name="languages" value="Китайский" >
+    Китайский
+  </label>     
     </form>
 </body>
 </html>
