--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -28,25 +28,30 @@
     Русский
   </label>
         
-    <label>
+   <p> <label>
     <input type="checkbox" name="languages" value="Испанский" >
     Испанский
-  </label>
+  </label></p>
 
-    <label>
+  <p>  <label>
     <input type="checkbox" name="languages" value="Немецкий" >
     Немецкий
-  </label>    
+  </label>    </p>
    
-    <label>
+  <p>  <label>
     <input type="checkbox" name="languages" value="Английский" >
    Английский
-  </label>  
+  </label>  </p>
 
-    <label>
+   <p> <label>
     <input type="checkbox" name="languages" value="Китайский" >
     Китайский
-  </label>     
+  </label>    </p> 
+
+        <p><input type=search placeholder="Напишите коротко о себе">
+   <input type="submit" value="Отправить"></p>
+   <input type="reset" value="Очистить"></p>     
+    
     </form>
 </body>
 </html>
