--- a/lab1/lab1_2.html
+++ b/lab1/lab1_2.html
@@ -1,14 +1,18 @@
-
+<!DOCTYPE html>
+<html lang = "ru">
+<head>
+  <title>Задание 2</title>
+</head>
 <body>
 <h1>Ссылки</h1>
 <nav>
 <!-- Сделайте элементы списка ссылками на соответствующие заголовки h2 -->
 	<ul>
-    <li><a href = "#How to make a link">Как сделать ссылку </a></li>
-    <li> <a href = "#colour of links"> Цвет ссылок </a></li>
-		<li> <a href = "#Target Attribute">Атрибут target</a> </li>
-		<li> <a href = "#Image as pic">Изображение в качестве ссылки</a></li>
-		<li> <a href = "#Links in page">Ссылки внутри страницы</a></li>
+    <li><a href = "#link1">Как сделать ссылку </a></li>
+    <li> <a href = "#link2"> Цвет ссылок </a></li>
+		<li> <a href = "#link3">Атрибут target</a> </li>
+		<li> <a href = "#link4">Изображение в качестве ссылки</a></li>
+		<li> <a href = "#link5">Ссылки внутри страницы</a></li>
 	</ul>
 </nav>
 
@@ -17,7 +21,7 @@
 <p>«Битой» ссылкой называют такую гиперссылку, которая ссылается на отсутствующий по каким-либо причинам объект, например, если документ или файл удален или перемещен администратором ресурса, на котором он был расположен, или если сам ресурс недоступен. Обычно в таком случае на странице появляется сообщение с кодом ошибки, но это происходит не всегда.</p>
 
 <hr>
-<article id ="How to make a link">
+<article id ="link1">
 <h2>Как сделать ссылку</h2>
 <p>Для создания ссылки необходимо сообщить браузеру, что является 
   ссылкой, а также указать адрес документа, на который следует сделать 
@@ -87,7 +91,7 @@
 <hr>
   
  
-<article id ="colour of links">
+<article id ="link2">
 <h2>Цвет ссылок</h2>
 <p>Цвета ссылок задаются в качестве атрибутов тега <code>&lt;body&gt;</code>. 
  Атрибуты являются необязательными и если они не указаны используются 
@@ -128,7 +132,7 @@
 <hr>
   </article>
 
-  <article id = "Target Attribute">
+  <article id = "link3">
 <h2>Атрибут target</h2>
 <p>По умолчанию, при переходе по ссылке документ открывается в текущем окне или 
   фрейме. При необходимости, это условие может быть изменено атрибутом <code>target</code> 
@@ -204,7 +208,7 @@
 <hr>
   </article>
 
-<article id = "Image as pic">	
+<article id = "link4">	
 <h2>Изображение в качестве ссылки</h2>
 <p>Кроме текста, в качестве ссылок можно использовать и рисунки. Изображение в 
   этом случае надо поместить между тегами <code>&lt;a&gt;</code> 
@@ -252,7 +256,7 @@
 <hr>
 	</article>
 
-<article id = "Links in page">	
+<article id = "link5">	
 <h2>Ссылки внутри страницы</h2>
 <p>
 Якорем называется закладка с уникальным именем на определённом месте веб-страницы, предназначенная для перехода к ней по ссылке. Якоря удобно применять в документах большого объёма, чтобы можно было быстро переходить к нужному разделу.
