--- a/index.html
+++ b/index.html
@@ -19,4 +19,13 @@
   <li><a href ="lab2/lab2_5.html">Задание 5</li> 
 </ul>
   </li>
+
+<li> <p>Лабораторная работа №3</p>
+<ul>
+<li><a href ="lab3/lab3_1.html>Задание 3</li>
+
+
+  
+</ul>
+  
 </ol>
