--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
   </li>
 
 
-  <h2>флаб</h2>
-<ul>
 
+  
+<li> <p>Лабораторная работа №3</p>
+  <ul>
+  <li><a href ="lab3/lab3_1.html">Задание 1</li>
+ 
 </ul>
-</li>
+  </li>
 </ol>
