--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang = "ru">
+<head>
+  <title>Задание 2</title>
+</head>
+<body>
 <h1> Лабораторные работы </h1>
 <ol>
 <li> <p>Лабораторная работа №1</p>
@@ -30,3 +36,4 @@
 </ul>
   </li>
 </ol>
+</body>
