--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -65,11 +65,22 @@
 
 <div> <p>Формула расчета энергии:</p>
 <p>E=mc <sup>2</sup></p>
-
+</div>
 <p>Химическая формула воды:</p>	
 <p>H <sub>2</sub>0</p>
+<p><i>Используется для текста, который по разным причинам отличается от обычного текста</i>
+<b>Используется для привлечения внимания к тексту, не указывая на то, что это более важно</b>
+<u>Используется для разметки текста, который должен отличаться стилистически от обычного текста</u>
 
-</div>
+</p>
+<em>Предназначен для текста, имеющего особое значение или на который следует сделать акцент</em>
+<strong>Элемент сильной значимости указывает на то, что его содержание имеет большое значение, серьезность или срочность</strong>
+<cite>Цитата или ссылка на другие ресурсы</cite>	
+	<code>Фрагмент компьютерного кода <h2></h2></code>
+
+	
+<p>------------------------------</p>
+<small>Перепечатка материала не преследуется по закону</small>	  
 </body>
 </html>
 
