--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -78,7 +78,7 @@
 <p><em>Предназначен для текста, имеющего особое значение или на который следует сделать акцент</em></p>
 <p><strong>Элемент сильной значимости указывает на то, что его содержание имеет большое значение, серьезность или срочность</strong></p>
 <p><cite>Цитата или ссылка на другие ресурсы</cite></p>	
-	<p><code>Фрагмент компьютерного кода <h2></h2></code></p>
+	<p><code>print("Hello, World!")</code></p>
 
 </div>	
 <p>------------------------------</p>
