--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <li> <p>Лабораторная работа №3</p>
   <ul>
   <li><a href ="lab3/lab3_1.html">Задание 1</li>
- 
+  <li><a href ="lab3/lab3_2/lab3_2.html">Задание 2</li>
 </ul>
   </li>
 </ol>
