--- a/lab1/lab1_5/lab1_5.html
+++ b/lab1/lab1_5/lab1_5.html
@@ -7,10 +7,10 @@
      <body> 
       <img src="1.gif" usemap="#image-map">
 <map name="image-map">
-    <area target="_blank" alt="рисунок1" title="рисунок1" href="#lab1/lab1_5/lab1_1.html" coords="19,5,113,41" shape="rect"></area>
-    <area target="_blank" alt="рисунок2" title="" href="#lab1/lab1_5/lab1_2.html" coords="115,2,208,32" shape="rect"></area>
-    <area target="_blank" alt="рисунок3" title="" href="#lab1/lab1_5/doc.html" coords="204,-1,297,31" shape="rect"></area>
-    <area target="_blank" alt="рисунок4" title="" href="#lab1/lab1_5/lab1_4.html" coords="301,3,392,31" shape="rect"></area>
+    <area  alt="рисунок1" title="рисунок1" href="lab1_1.html" coords="19,5,113,41" shape="rect"></area>
+    <area  alt="рисунок2" title="" href="lab1_2.html" coords="115,2,208,32" shape="rect"></area>
+    <area  alt="рисунок3" title="" href="lab1_3/doc.html" coords="204,-1,297,31" shape="rect"></area>
+    <area  alt="рисунок4" title="" href="lab1_4/lab1_4.html" coords="301,3,392,31" shape="rect"></area>
 </map>
      </body>
     </html>
