--- a/lab3/lab3_2/lab3_2.html
+++ b/lab3/lab3_2/lab3_2.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Стили</title>
-  <link href ="lab3/lab3_2/style.css" rel ="stylesheet" type ="text/css">
+  <link href ="lab3/lab3_2/style.css" rel ="stylesheet" >
 </head>
 <body>
 	<div class="wrapper">
