--- a/lab1/lab1_5/lab1_5.html
+++ b/lab1/lab1_5/lab1_5.html
@@ -5,8 +5,8 @@
       <title>Карта-изображение</title>
      </head>
      <body> 
-      <img src="1.gif" usemap="#image-map">
-<map name="image-map">
+      <img src="1.gif" usemap="#image_map">
+<map name="image_map">
     <area  alt="рисунок1" title="рисунок1" href="lab1_1.html" coords="19,5,113,41" shape="rect"></area>
     <area  alt="рисунок2" title="" href="lab1_2.html" coords="115,2,208,32" shape="rect"></area>
     <area  alt="рисунок3" title="" href="lab1_3/doc.html" coords="204,-1,297,31" shape="rect"></area>
