--- a/lab2/lab2_3.html
+++ b/lab2/lab2_3.html
@@ -9,8 +9,8 @@
 
 
 <body>
-    <iframe src="menu.html" name="menu" width="200" height="100vh"></iframe>
-    <iframe name="CONTENT" width="800" height="100vh"></iframe>
+    <iframe src="menu.html" name="menu" width=200 height=100vh></iframe>
+    <iframe name="CONTENT" width=800 height=100vh></iframe>
 </body>
 
 </html>
