--- a/lab2/lab2_3.html
+++ b/lab2/lab2_3.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Организация фреймовой структуры</title>
+<style>
+    iframe{
+        height:100vh;
+    }
+</style>
 </head>
 
 
 <body>
-    <iframe src="menu.html" name="menu" width=200 height=100vh></iframe>
-    <iframe name="CONTENT" width=800 height=100vh></iframe>
+    <iframe src="menu.html" name="menu" width=200 ></iframe>
+    <iframe name="CONTENT" width=800 ></iframe>
 </body>
 
 </html>
