--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -8,19 +8,49 @@
 <body>
     <form>
  <p><label for="email">Email</label></p>
-  <input type="text" placeholder="Введите e-mail" name="email" required>
+  <input id="email" type="text" placeholder="Введите e-mail" name="email" required>
 
  <p> <label for="пароль">Пароль</label> </p>
-    <input type="password" placeholder="Введите пароль" name="пароль" required> 
+    <input id="пароль" type="password" placeholder="Введите пароль" name="пароль" required> 
 <p>Пол</p>
-<label for="man">Мужчина</label>
-        <input  type="radio" name="man" value="option1" id="opt1"> 
-<label for="man">Женчина</label>
-        <input name="woman" type="radio" value="option2" id = "opt2"> 
+<label for="sex1">Мужчина</label>
+        <input id="sex1" type="radio" name="sex" value="option1" id="opt1"> 
+<label for="sex2">Женщина</label>
+        <input id="sex"name="sex" type="radio" value="option2" id = "opt2"> 
  <p><input type="submit" value="Выбрать"></p>   
 
 <p><label for="date">Год рождения</label> </p>
- <input type="date" value="2005-07-21"> 
+<select>
+                     <option value="data1">1999</option>
+                            <option value="data19">1999</option>
+                            <option value="data20">2000</option>
+                            <option value="data21">2001</option>
+                            <option value="data22">2002</option>
+                            <option value="data23">2003</option>
+                            <option value="data24">2004</option>
+                            <option value="data25">2005</option>
+                            <option value="data26">2006</option>
+                            <option value="data27">2007</option>
+                            <option value="data28">2008</option>
+                            <option value="data29">2009</option>
+                            <option value="data30">2010</option>
+                            <option value="data31">2011</option>
+                            <option value="data32">2012</option>
+                            <option value="data33">2013</option>
+                            <option value="data33">2014</option>
+                            <option value="data34">2015</option>
+                            <option value="data35">2016</option>
+                            <option value="data36">2017</option>
+                            <option value="data37">2018</option>
+                            <option value="data38">2019</option>
+                            <option value="data39">2020</option>
+                            <option value="data40">2021</option>
+                            <option value="data41">2022</option>
+                            <option value="data42">2023</option>
+                            <option value="data43">2024</option>
+                            <option value="data44">2025</option>
+    
+</select>
 
 <p><label for="языки">Я знаю</label> </p>
     <label>
