--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -77,7 +77,7 @@
     <input type="checkbox" name="languages" value="Китайский" >
     Китайский
   </label>    </p> 
-
+<form action="" method="get" >
         <p><input type=search placeholder="Напишите коротко о себе">
    <input type="submit" value="Отправить"></p>
    <input type="reset" value="Очистить"></p>     
