--- a/lab3/lab3_2/lab3_2.html
+++ b/lab3/lab3_2/lab3_2.html
@@ -15,6 +15,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
 
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>	
+
+ <link rel="icon" href="favicon.ico">	
 </head>
 <body>
 	<div class="wrapper">
