--- a/lab4/lab4_1.html
+++ b/lab4/lab4_1.html
@@ -1,1 +1,59 @@
 
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Оформление вертикального меню</title>
+	<style>
+		.menu {
+			width:200px;
+			background:#369;
+		}
+		
+		.menu ul {
+       list-style:none;
+       padding: 0;
+		   margin:0;
+    	 padding-top:5px;
+       padding-bottom:5px;
+       padding-left:10px;
+       padding-right:10px;
+			
+		}
+		
+		.menu li {
+		   padding-top:5px;
+       padding-bottom:5px;
+       padding-left:0px;
+       padding-right:0px;
+		}
+		
+		.menu li a {
+		   display: inline-block;
+		// padding:10px;
+		// text-transform:uppercase;
+		// text-decoration:none;
+      
+		// background-color:white;
+		// text-color:black;
+		}
+		
+		.menu li a:hover {
+		// background-color:#00BFFF;
+		// text-color:black;
+		}
+	</style>
+</head>
+<body>
+	<nav class="menu">
+		<ul>
+			<li><a href="#">Фильмы</a></li>
+			<li><a href="#">Музыка</a></li>
+			<li><a href="#">Софт</a></li>
+			<li><a href="#">Игры</a></li>
+		</ul>
+	</nav>
+</body>
+</html>
