--- a/index.html
+++ b/index.html
@@ -35,5 +35,12 @@
   <li><a href ="lab3/lab3_2/lab3_2.html">Задание 2</li>
 </ul>
   </li>
+
+
+  <li> <p>Лабораторная работа №4</p>
+  <ul>
+  <li><a href ="lab4/lab4_1.html">Задание 1</li>
+</ul>
+  </li>
 </ol>
 </body>
