--- a/lab4/lab4_1.html
+++ b/lab4/lab4_1.html
@@ -13,36 +13,35 @@
 		}
 		
 		.menu ul {
-       list-style:none;
-       padding: 0;
-		   margin:0;
-    	 padding-top:5px;
-       padding-bottom:5px;
-       padding-left:10px;
-       padding-right:10px;
+	                list-style:none;
+	                padding: 0;
+			margin:0;
+	    	        padding-top:5px;
+	       		padding-bottom:5px;
+	       		padding-left:10px;
+	       		padding-right:10px;
 			
 		}
 		
 		.menu li {
-		   padding-top:5px;
-       padding-bottom:5px;
-       padding-left:0px;
-       padding-right:0px;
+			padding-top:5px;
+		       	padding-bottom:5px;
+		       	padding-left:0px;
+		       	padding-right:0px;
 		}
 		
 		.menu li a {
-		   display: inline-block;
-		// padding:10px;
-		// text-transform:uppercase;
-		// text-decoration:none;
-      
-		// background-color:white;
-		// text-color:black;
+			   display: inline-block;
+			   padding:10px;
+			   text-transform:uppercase;
+			   text-decoration:none;
+			   background-color:white;
+			   text-color:black;
 		}
 		
 		.menu li a:hover {
-		// background-color:#00BFFF;
-		// text-color:black;
+		   background-color:#00BFFF;
+		   text-color:black;
 		}
 	</style>
 </head>
