--- a/lab4/lab4_1.html
+++ b/lab4/lab4_1.html
@@ -40,7 +40,7 @@
 		}
 		
 		.menu li a:hover {
-		   background-color:#00BFFF;
+		   background-color:#F0E68C;
 		   text-color:black;
 		}
 	</style>
