--- a/lab4/lab4_1.html
+++ b/lab4/lab4_1.html
@@ -1,4 +1,4 @@
-
+.
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -26,8 +26,8 @@
 		.menu li {
 			padding-top:5px;
 		       	padding-bottom:5px;
-		       	padding-left:0px;
-		       	padding-right:0px;
+/* 		       	padding-left:0px;
+		       	padding-right:0px; */
 		}
 		
 		.menu li a {
