--- a/lab4/lab4_1.html
+++ b/lab4/lab4_1.html
@@ -26,13 +26,13 @@
 		.menu li {
 			padding-top:5px;
 		       	padding-bottom:5px;
-/* 		       	padding-left:0px;
-		       	padding-right:0px; */
+		       	padding-left:0px;
+		       	padding-right:0px; 
 		}
 		
 		.menu li a {
 			   display: inline-block;
-			   padding:10px;
+/* 			   padding:10px; */
 			   text-transform:uppercase;
 			   text-decoration:none;
 			   background-color:white;
