--- a/lab4/lab4_1.html
+++ b/lab4/lab4_1.html
@@ -31,8 +31,8 @@
 		}
 		
 		.menu li a {
-			   display: inline-block;
-/* 			   padding:10px; */
+/* 			   display: inline-block; */
+			   padding:10px; 
 			   text-transform:uppercase;
 			   text-decoration:none;
 			   background-color:white;
