--- a/lab4/lab4_1.html
+++ b/lab4/lab4_1.html
@@ -14,8 +14,6 @@
 		
 		.menu ul {
 	                list-style:none;
-	                padding: 0;
-			margin:0;
 	    	        padding-top:5px;
 	       		padding-bottom:5px;
 	       		padding-left:10px;
@@ -31,7 +29,7 @@
 		}
 		
 		.menu li a {
-/* 			   display: inline-block; */
+ 			   display: inline-block; 
 			   padding:10px; 
 			   text-transform:uppercase;
 			   text-decoration:none;
