--- a/lab4/lab4_1.html
+++ b/lab4/lab4_1.html
@@ -13,6 +13,7 @@
 		}
 		
 		.menu ul {
+			margin:0;
 	                list-style:none;
 	    	        padding-top:5px;
 	       		padding-bottom:5px;
