--- a/lab4/lab4_1.html
+++ b/lab4/lab4_1.html
@@ -30,6 +30,7 @@
 		
 		.menu li a {
  			   display: inline-block; 
+			   width:160px;
 			   padding:10px; 
 			   text-transform:uppercase;
 			   text-decoration:none;
