--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </li>
 <li> <p>Лабораторная работа №2</p>
   <ul>
-  <li><a href ="lab2/lab2_1.html">Задание 1</li>
-  <li><a href ="lab2/lab2_2.html">Задание 2</li>     
-  <li><a href ="lab2/lab2_3.html">Задание 3</li> 
-  <li><a href ="lab2/lab2_4.html">Задание 4</li>
-  <li><a href ="lab2/lab2_5.html">Задание 5</li> 
+  <li><a href ="lab2/lab2_1.html">Задание 1</a></li>
+  <li><a href ="lab2/lab2_2.html">Задание 2</a></li>     
+  <li><a href ="lab2/lab2_3.html">Задание 3</a></li> 
+  <li><a href ="lab2/lab2_4.html">Задание 4</a></li>
+  <li><a href ="lab2/lab2_5.html">Задание 5</a></li> 
 </ul>
   </li>
 
@@ -31,15 +31,15 @@
   
 <li> <p>Лабораторная работа №3</p>
   <ul>
-  <li><a href ="lab3/lab3_1.html">Задание 1</li>
-  <li><a href ="lab3/lab3_2/lab3_2.html">Задание 2</li>
+  <li><a href ="lab3/lab3_1.html">Задание 1</a></li>
+  <li><a href ="lab3/lab3_2/lab3_2.html">Задание 2</a></li>
 </ul>
   </li>
 
 
   <li> <p>Лабораторная работа №4</p>
   <ul>
-  <li><a href ="lab4/lab4_1.html">Задание 1</li>
+  <li><a href ="lab4/lab4_1.html">Задание 1</a></li>
 </ul>
   </li>
 </ol>
