--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <li> <p>Лабораторная работа №4</p>
   <ul>
   <li><a href ="lab4/lab4_1.html">Задание 1</a></li>
+  <li><a href ="lab4/lab4_2.html">Задание 2</a></li>
 </ul>
   </li>
 </ol>
