--- a/lab4/lab4_2.html
+++ b/lab4/lab4_2.html
@@ -41,7 +41,8 @@
 <body>
 	<nav class="menu">
 		<ul>
-			<li><a href="#">Фильмы</a>
+			<li> <img src ="minus.gif" alt="минус">
+				<a href="#">Фильмы</a>
 				<ul>
 					<li><a href="#">Экшн</a></li>
 					<li><a href="#">Мелодрамы</a></li>
