--- a/lab4/lab4_2.html
+++ b/lab4/lab4_2.html
@@ -18,7 +18,7 @@
 			}
 			
 			.menu li {
-					
+				background-image: url("minus.gif");	
 			}
 			
 			.menu li a {
@@ -41,8 +41,7 @@
 <body>
 	<nav class="menu">
 		<ul>
-			<li> <img src ="minus.gif" alt="минус">
-				<a href="#">Фильмы</a>
+			<li> <a href="#">Фильмы</a>
 				<ul>
 					<li><a href="#">Экшн</a></li>
 					<li><a href="#">Мелодрамы</a></li>
