--- a/lab4/lab4_2.html
+++ b/lab4/lab4_2.html
@@ -18,7 +18,8 @@
 			}
 			
 			.menu li {
-				background-image: url("minus.gif");	
+				list-style-type:none;
+				list-style-image: url("minus.gif");	
 			}
 			
 			.menu li a {
