--- a/lab4/lab4_2.html
+++ b/lab4/lab4_2.html
@@ -18,8 +18,8 @@
 			}
 			
 			.menu li {
-				list-style-type:none;
-				list-style-image: url("minus.gif");	
+				
+				background: url("minus.gif");	
 			}
 			
 			.menu li a {
