--- a/lab4/lab4_2.html
+++ b/lab4/lab4_2.html
@@ -19,7 +19,8 @@
 			
 			.menu li {
 				
-				background: url("minus.gif");	
+				list-style-type:none;
+				list-image:url("minus.gif");
 			}
 			
 			.menu li a {
