--- a/lab4/lab4_2.html
+++ b/lab4/lab4_2.html
@@ -20,7 +20,7 @@
 			.menu li {
 				
 				list-style-type:none;
-				list-image:url("minus.gif");
+				list-style-image:url("minus.gif");
 			}
 			
 			.menu li a {
