--- a/lab4/lab4_2.html
+++ b/lab4/lab4_2.html
@@ -24,7 +24,8 @@
 			}
 			
 			.menu li a {
-					
+				list-style-type:none;
+				list-style-image:url("point.gif");	
 			}
 			
 			.menu li a:hover {
