--- a/lab4/lab4_3.html
+++ b/lab4/lab4_3.html
@@ -11,7 +11,7 @@
           			width: 16px;
          			height: 16px;
           			float: left;
-          			background: url("css-sprites (2).png") no-repeat;
+          			background: url("css_sprites.png") no-repeat;
       			}
 			.menu {
 				width: 200px;
