--- a/lab4/lab4_3.html
+++ b/lab4/lab4_3.html
@@ -14,7 +14,7 @@
           			background: url("css_sprites.png") no-repeat;
       			}
 			.closed .icon{
-				background-position: 0 -32px; 
+				background-position: 0 -34px; 
   				cursor: text;
 			}
 			.menu {
@@ -75,38 +75,60 @@
       			 <div class="icon"></div>
 			<li><a href="#">Музыка</a>
 				<ul>
+					<div class ="closed">
           				 <div class="icon"></div>
 					<li><a href="#">Классика</a></li>
+					</div>
+					<div class ="closed">
           				<div class="icon"></div>
 					<li><a href="#">Джаз</a></li>
+					</div>
+					<div class ="closed">
            				<div class="icon"></div>
 					<li><a href="#">Рок</a></li>
+					</div>
+					<div class ="closed">
            				<div class="icon"></div>
 					<li><a href="#">Грандж</a></li>
+					</div>
 				</ul>
 			</li>
        			<div class="icon"></div>
 			<li><a href="#">Софт</a>
 				<ul>
+					<div class ="closed">
            				<div class="icon"></div>
 					<li><a href="#">Графика</a></li>
+					</div>
+					<div class ="closed">
            				<div class="icon"></div>
 					<li><a href="#">3D-моделирование</a></li>
-           				<div class="icon"></div>
+					</div>
+					<div class ="closed">
+					<div class="icon"></div>
 					<li><a href="#">Машинопись</a></li>
+					</div>
+					<div class ="closed">
            				<div class="icon"></div>
 					<li><a href="#">Переводчики</a></li>
+					</div>
 				</ul>
 			</li>
        			<div class="icon"></div>
 			<li><a href="#">Игры</a>
 				<ul>
+					<div class ="closed">
           				<div class="icon"></div>
 					<li><a href="#">РПГ</a></li>
+					</div>
+					<div class ="closed">
            				<div class="icon"></div>
 					<li><a href="#">Шутеры</a></li>
+					</div>
+					<div class ="closed">
            				<div class="icon"></div>
 					<li><a href="#">Пасьянсы</a></li>
+					</div>
 				</ul>
 			</li>
 		</ul>
