--- a/lab4/lab4_3.html
+++ b/lab4/lab4_3.html
@@ -7,7 +7,7 @@
 			html {
 				background: #f0f0f0;
 			}
-			.icon{
+			.icon:before{
           			width: 16px;
          			height: 16px;
           			float: left;
