--- a/lab1/lab1_5/lab1_5.html
+++ b/lab1/lab1_5/lab1_5.html
@@ -9,7 +9,7 @@
 <map name="image_map">
     <area  alt="рисунок1" title="рисунок1" href="lab1_1.html" coords="19,5,113,41" shape="rect">
     <area  alt="рисунок2" title="" href="lab1_2.html" coords="115,2,208,32" shape="rect">
-    <area  alt="рисунок3" title="" href="lab1_3/doc.html" coords="204,-1,297,31" shape="rect">
-    <area  alt="рисунок4" title="" href="lab1_4/lab1_4.html" coords="301,3,392,31" shape="rect">
+    <area  alt="рисунок3" title="" href="lab1/lab1_3/doc.html" coords="204,-1,297,31" shape="rect">
+    <area  alt="рисунок4" title="" href="lab1/lab1_4/lab1_4.html" coords="301,3,392,31" shape="rect">
      </body>
     </html>
