--- a/lab1/lab1_4/lab1_4.html
+++ b/lab1/lab1_4/lab1_4.html
@@ -27,7 +27,7 @@
 		Атрибут <code>srcset</code> задаёт путь к графическим файлам с учётом размера изображения и устройств.
 	</p>
  	
-	<img  src="images/mushroom.jpg" srcset="mushroom_portrait.jpg 350w" sizes="(max-width: 600px) 300px, (min-width: 600px) 600px" alt="">
+	<img  src="images/mushroom.jpg" alt="">
 		
 
 	<h2>Подпись к изображению</h2>
