--- a/lab2/lab2_2.html
+++ b/lab2/lab2_2.html
@@ -26,12 +26,10 @@ td,th {
         <caption>1-я таблица</caption>
         <tbody>
             <tr>
-                <th rowspan="3">1</th>
-            </tr>
-                <th colspan="3">2</th>
+                <th rowspan="2">1</th>
+                <td colspan="2">2</td>
             </tr>
             <tr>
-                
                 <td>5</td>
                 <td>6</td>
             </tr>
