--- a/lab2/lab2_4.html
+++ b/lab2/lab2_4.html
@@ -34,6 +34,7 @@
   <source src="yuriy-gagarin-poehali.ogg" type="audio/ogg" />
   
 </audio>
-
+<h2>Демонстрация добавления карты</h2>
+	<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/org/orlovskiy_gosudarstvenny_universitet_imeni_i_s_turgeneva/1030860442/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Орловский государственный университет имени И. С. Тургенева</a><a href="https://yandex.ru/maps/10/orel/category/university/184106140/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">ВУЗ в Орле</a><iframe src="https://yandex.ru/map-widget/v1/?from=api-maps&ll=36.063909%2C52.951255&mode=search&oid=1030860442&ol=biz&utm_source=api-maps&z=17" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
 </body>
 </html>
