--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -16,8 +16,8 @@
 <label for="sex1">Мужчина</label>
         <input id="sex1" type="radio" name="sex" value="option1" id="opt1"> 
 <label for="sex2">Женщина</label>
-        <input id="sex"name="sex" type="radio" value="option2" id = "opt2"> 
- <p><input type="submit" value="Выбрать"></p>   
+        <input id="sex2"name="sex" type="radio" value="option2" id = "opt2"> 
+   
 
 <p><label for="date">Год рождения</label> </p>
 <select>
