--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -14,12 +14,12 @@
     <input id="пароль" type="password" placeholder="Введите пароль" name="пароль" required> 
 <p>Пол</p>
 <label for="sex1">Мужчина</label>
-        <input id="sex1" type="radio" name="sex" value="option1" id="opt1"> 
+        <input id="sex1" type="radio" name="sex" value="option1" > 
 <label for="sex2">Женщина</label>
-        <input id="sex2"name="sex" type="radio" value="option2" id = "opt2"> 
+        <input id="sex2" name="sex" type="radio" value="option2" > 
    
 
-<p><label for="date">Год рождения</label> </p>
+<p><label id="date"> Год рождения</label> </p>
 <select>
                      <option value="data1">1999</option>
                             <option value="data19">1999</option>
@@ -52,7 +52,7 @@
     
 </select>
 
-<p><label for="языки">Я знаю</label> </p>
+<p><label id="языки">Я знаю</label> </p>
     <label>
     <input type="checkbox" name="languages" value="Русский"  checked="checked" disabled>
     Русский
@@ -77,11 +77,11 @@
     <input type="checkbox" name="languages" value="Китайский" >
     Китайский
   </label>    </p> 
-<form action="" method="get" >
+
         <p><input type=search placeholder="Напишите коротко о себе">
-   <input type="submit" value="Отправить"></p>
-   <input type="reset" value="Очистить"></p>     
-    
+   <input type="submit" value="Отправить">
+   <input type="reset" value="Очистить">    
+</p>
     </form>
 </body>
-</html>
+</html> 
