--- a/lab4/lab4_3.html
+++ b/lab4/lab4_3.html
@@ -11,12 +11,11 @@
           			width: 16px;
          			height: 16px;
           			float: left;
-          			background: url("css_sprites.png") no-repeat;
-      			}
-			.closed .icon{
-				background-position: 0 -35px; 
-  				cursor: text;
-			}
+          			background: url("css_sprites.png") -24px 0 no-repeat;
+				float: left; 
+  				margin: 0 10px 2px 0; 
+ 		     	}
+			
 			.menu {
 				width: 200px;
 				background: #fff;
