--- a/lab4/lab4_3.html
+++ b/lab4/lab4_3.html
@@ -7,6 +7,15 @@
 			html {
 				background: #f0f0f0;
 			}
+
+			.icon{
+          			width: 16px;
+         			height: 16px;
+          			float: left;
+          			background: url("css_sprites.png") -24px 0 no-repeat;
+				float: left; 
+  				margin: 0 10px 2px 0; 
+ 		     	}
 			.icon:before{
           			width: 16px;
          			height: 16px;
