--- a/lab4/lab4_3.html
+++ b/lab4/lab4_3.html
@@ -12,7 +12,7 @@
           			width: 16px;
          			height: 16px;
           			float: left;
-          			background: url("css_sprites.png") -24px 0 no-repeat;
+          			background: url("css_sprites.png")-1px -1px  no-repeat;
 				float: left; 
   				margin: 0 10px 2px 0; 
  		     	}
@@ -20,7 +20,7 @@
           			width: 16px;
          			height: 16px;
           			float: left;
-          			background: url("css_sprites.png") -24px 0 no-repeat;
+          			background: url("css_sprites.png")-1px -1px no-repeat;
 				float: left; 
   				margin: 0 10px 2px 0; 
  		     	}
