--- a/lab4/lab4_5.html
+++ b/lab4/lab4_5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/all.css" />
 		<meta charset="UTF-8">
 		<title>Оформление вертикального меню</title>
 		<style>
