--- a/lab4/lab4_3.html
+++ b/lab4/lab4_3.html
@@ -16,7 +16,7 @@
 				float: left; 
   				margin: 0 4px 2px 0; 
  		     	}
-			.icon_minus:before{
+			.icon_minus::before{
           			width: 16px;
          			height: 16px;
           			float: left;
@@ -32,7 +32,7 @@
 				float: left; 
   				margin: 0 4px 2px 0; 
  		     	}
-			.icon_dot:before{
+			.icon_dot::before{
           			width: 16px;
          			height: 16px;
           			float: left;
