--- a/lab4/lab4_5.html
+++ b/lab4/lab4_5.html
@@ -33,9 +33,14 @@
 			}
 			
 			.menu li ul {
-					
+				display:none;
+				position:relative;
+				top: 0;
+				width:150px;
 			}
-			
+			.menu li:hover ul {
+				display:block;
+			}
 			.menu li li {
 					
 			}
