--- a/index.html
+++ b/index.html
@@ -47,3 +47,10 @@
   </li>
 </ol>
 </body>
+
+  
+<li> <p>Лабораторная работа №5</p>
+  <ul>
+  <li><a href ="lab5/lab5_1.html">Задание 1</a></li>
+</ul>
+  </li>
