--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <li> <p>Лабораторная работа №5</p>
   <ul>
   <li><a href ="lab5/lab5_1.html">Задание 1</a></li>
+  <li><a href ="lab5/lab5_2.html">Задание 2</a></li>
 </ul>
   </li>
 </ol>
