--- a/lab5/lab5_2.html
+++ b/lab5/lab5_2.html
@@ -6,12 +6,15 @@
 <style type="text/css">
 #left{
 	background:#ccf;
+	box-sizing:border-box;
 }
 #right{
 	background:#fcc;
+	box-sizing:border-box;
 }
 #center{
 	background:#cfc;
+	box-sizing:border-box;
 }
 </style>
 </head>
